--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="build/css/styles.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDPe_5UuDK4YnbIdaGodRrYaL7LkG9aS74"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
 
 
   </head>
